syntax = "proto2";

package server.protobuf.messages;


message EgateBankMessage {
    repeated bool gates = 1;
}

message EgateBanksUpdateMessage {
    optional int64 effectiveFrom = 1;
    repeated EgateBankMessage banks = 2;
}

message EgateBanksUpdatesMessage {
    optional string terminal = 1;
    repeated EgateBanksUpdateMessage updates = 2;
}

message PortEgateBanksUpdatesMessage {
    repeated EgateBanksUpdatesMessage updates = 1;
}

message SetEgateBanksUpdateMessage {
    optional string terminal = 1;
    optional int64 originalDate = 2;
    optional EgateBanksUpdateMessage update = 3;
}

message RemoveEgateBanksUpdateMessage {
    optional string terminal = 1;
    optional int64 date = 2;
}
