syntax = "proto2";

package server.protobuf.messages;

message RedListUpdateMessage {
    optional int64 effectiveFrom = 1;
    repeated AdditionMessage additions = 2;
    repeated RemovalMessage removals = 3;
}

message AdditionMessage {
    optional string countryName = 1;
    optional string countryCode = 2;
}

message RemovalMessage {
    optional string countryName = 1;
}

message RedListUpdatesMessage {
    repeated RedListUpdateMessage updates = 1;
}

message SetRedListUpdateMessage {
    optional int64 originalDate = 1;
    optional RedListUpdateMessage update = 2;
}

message RemoveUpdateMessage {
    optional int64 date = 1;
}
